--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button onclick="startApp()">Start Vision</button>
 
     <div class="video-container">
-      <video id="video" autoplay></video>
+      <video id="video" autoplay muted playsinline></video>
       <canvas id="canvas"></canvas>
     </div>
 
